# embassy-start

./: Cargo.toml  Makefile  build.rs  rust-toolchain.toml
.cargo/: config.toml
src/: accelerometer.rs  main.rs
