[package]
name = "embassy-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m-rt = "0.7.0"

embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers", "defmt", "nightly"] }
embassy-time = { version = "0.1.0", default-features = false, features = ["defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }


