[package]
name = "embassy-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers", "defmt", "nightly"] }
embassy-time = { version = "0.1.0", default-features = false, features = ["defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}
embassy-sync = {version = "0.1.0"}

lsm303agr = "0.2.2"

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-


